<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_foto_univ"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/gambar_detail"
            android:scaleType="fitXY"
            android:src="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_nama_univ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nama_univ"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/tv_website_univ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/website_univ"
            android:textColor="@color/colorBlue"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_deskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/deskripsi"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_deskripsi_univ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/isi_deskripsi"
            android:textColor="@color/colorBlack" />
    </LinearLayout>
</ScrollView>